# highlighter-client-v2-notebooks

./: .gitattributes  .gitignore  README.md  export-submissions.ipynb  justfile  pyproject.toml  train-in-colab.ipynb  train-mmdet.ipynb
colab-scripts/: pip-install-hcp.sh  setup-export-submissions.sh  setup-infer-mmdet.sh  setup-train-mmdet.sh
hook-scripts/: clean-nb.sh  sanitize-highlighter-account-url.sh  sanitize-highlighter-creds.sh  sanitize-notebook.py  sanitize-pypi-creds.sh
notebooks/: export-submissions.ipynb  infer-mmdet-clean.ipynb  train-mmdet.ipynb
