[tool.poetry]
name = "highlighter_client_v2_notebooks"
version = "0.2"
description = ""
authors = [
"joshua patterson <joshua.patterson@silverpond.com.au>",
]

[[tool.poetry.source]]
name = "silverpond"
url = "https://pypi.silverpond.com.au/simple"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
jupyterlab = "^3.2.3"
poethepoet = "^0.10.0"
onnx = "*"
onnxruntime = "==1.8.1"
nbstripout = "^0.5.0"
highlighter-client-v2-alpha = "==0.6"

[tool.poe.tasks]
force-cuda11 = "python -m pip install torch==1.8.0+cu111 torchvision==0.9.0+cu111 -f https://download.pytorch.org/whl/cu111/torch_stable.html"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
