[tool.poetry]
name = "highlighter_client_v2_notebooks"
version = "0.2"
description = ""
authors = [
"joshua patterson <joshua.patterson@silverpond.com.au>",
]

[[tool.poetry.source]]
name = "silverpond"
url = "https://pypi.silverpond.com.au/simple"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
jupyterlab = "^3.2.3"
poethepoet = "^0.10.0"
onnx = "*"
onnxruntime = "==1.8.1"
nbstripout = "^0.5.0"
highlighter-client-v2-alpha = "==0.6"

[tool.poe.tasks]
install-torch = "pip3 install torch==1.10.1+cu113 torchvision==0.11.2+cu113 -f https://download.pytorch.org/whl/cu113/torch_stable.html"

[tool.poe.tasks.install-hcp]
shell = """
pip3 install -i https://${PYPI_USERNAME}:${PYPI_PASSWORD}@pypi.silverpond.com.au/simple highlighter-client-v2-alpha==0.6
"""


[tool.poe.tasks.install-mmcv-full]
shell = """
pip3 install mmcv-full==1.3.17 -f https://download.openmmlab.com/mmcv/dist/cu113/torch1.10.0/index.html
"""

[tool.poe.tasks.install-onnx]
shell = """
pip3 install onnx onnxruntime==1.8.1
"""


[tool.poe.tasks.install-mmdet]
shell = """
git clone --depth 1 --branch v2.18.0 https://github.com/open-mmlab/mmdetection.git
cd mmdetection; 
pip install .
"""




[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
